<resources>
    <string name="app_name">TrainApp</string>
    <string name="paths">Paths</string>
    <string name="path">Path</string>
    <string name="path_testing">Path testing</string>
    <string name="sequences">Sequences</string>
    <string name="sequence_custom">Custom sequence</string>
    <string name="sequence_random">Random sequence</string>
    <string name="frequency">Frequency</string>
    <string name="formulas">Formulas</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="what_we_do">What we do</string>
    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string name="activate_changes">Update</string>

    <string name="intro">This app gives basic introduction into trains mechanic.\nBellow you can see buttons: paths, sequenses and about.\nPaths button opens menu of paths.\nSequenses button opens menu of sequenses of vagons.\nAbout button opens detailed description of current app.</string>
    <string name="path_testing_message">Above you can see graph of pressure index changing by position of path.</string>
    <string name="path_testing_error">Please, fill the calculation data.</string>

    <string name="formula_description_1">Oscillations that occur under the influence of an external periodic force are called forced oscillations.</string>
    <string name="formula_description_2">In this case, the external force performs positive work and ensures the influx of energy to the oscillatory system. It does not allow oscillations to decay, despite the action of frictional forces.</string>
    <string name="formula_description_3">If the frequency of the external force approaches the natural frequency, there is a sharp increase in the amplitude of the forced oscillations. This phenomenon is called resonance.</string>

    <string name="sequences_intro">This is sequenses menu.\nBellow you can see buttons to:\nCustom: create your own sequense of vagons;\nRandom: get random sequense of vagons to test.</string>
    <string name="vagon">Vagon</string>
    <string name="path_info">Path info</string>
    <string name="path_test">Path test</string>
    <string name="res_coeff">Res coeff</string>
    <string name="mass">Mass (tonns)</string>
    <string name="test">Test</string>
    <string name="optimize">Optimize</string>
    <string name="test_sequence">Test sequence</string>
    <string name="amount_of_vagons">Amount of vagons</string>

    <string name="about_text"><![CDATA[This app gives basic introduction into trains mechanic. It has the following features:<br><br><ol><li><b>Sequence</b>.<br><br><ul><li>Allows to create <i>custom sequence</i> with certain vagon count and certain mass, and then optimize they mutual arrangement to minimize risks while movement.</li><br><li><i>Random sequence</i> is the same, but creates random vagons count with random masses.</li></ul></li><br><li><b>Paths</b>. Choice of certain path from the list allows you to test train movement on the path. Also path info is available in the path menu.</li><br><li>The app supports english and russian languages.</li><br><li>Also you can write your questions and suggestions in the support.</li></ol>]]></string>
    <string name="support_text">Please, feel free to write your questions and suggestions to our support.</string>
    <string name="support_mail_subject">Subject:</string>
    <string name="support_mail_body">Text:</string>
    <string name="support_send_mail">Send mail</string>
    <string name="empty_mail_error">Mail body cannot be empty.</string>
    <string name="support_send_mail_title">Send email&#8230;</string>

    <string name="path_info_name">Path name:</string>
    <string name="path_info_length">Path length:</string>
    <string name="path_info_length_value">%d m</string>
    <string name="path_info_text">Line data shown on current railway path is shown as vertical data represented as changing array of numbers. To test any vagon movement on current path you can choose Path Test and testify your custom vagon.</string>

    <string name="tutorial_title_1">Welcome!</string>
    <string name="tutorial_text_1">Purpose of this app is calculating train movement mechanics.</string>
    <string name="tutorial_title_2">Sequences</string>
    <string name="tutorial_text_2">In a Sequences menu you can choose custom or random vagon sequence to test.</string>
    <string name="tutorial_title_3">Custom sequence</string>
    <string name="tutorial_text_3">In a custom sequence you can set your own amount of vagons and their masses.</string>
    <string name="tutorial_title_4">Random sequence</string>
    <string name="tutorial_text_4">Random sequence generates amount of vagons and their masses by itself.</string>
    <string name="tutorial_title_5">Paths</string>
    <string name="tutorial_text_5">In Paths menu you can find a list of Kazakhstan train paths.</string>
    <string name="tutorial_title_6">Path info</string>
    <string name="tutorial_text_6">You can learn about certain path in a path info window.</string>
    <string name="tutorial_title_7">Path testing</string>
    <string name="tutorial_text_7">Path testing is calculation train movement parameters.</string>
    <string name="tutorial_title_8">Support</string>
    <string name="tutorial_text_8">If you have any questions and suggestions, we would be glad if you write us.</string>
    <string name="tutorial_title_9">Let\'s get started!</string>
    <string name="tutorial_text_9">Proceed to app.</string>
    <string name="test_sequence_resonance">Resonance test</string>
    <string name="test_sequence_stop">Deceleration time</string>
    <string name="speed">Speed (m/s)</string>
    <string name="res_speed">Resonance at %f m/s</string>
    <string name="formula_description_4">This formula shows resonance speed of wagon with defined circular frequency «ν» on path with rail link «Ln».</string>
    <string name="formula_description_5">Kinetic energy always characterizes the body with respect to the chosen frame of reference. The kinetic energy of a body is determined by its velocity relative to the chosen frame of reference.</string>
    <string name="formula_description_6">Potential energy always characterizes the body relative to the source of power. The potential energy is determined by the location of the bodies in the field.</string>
    <string name="formula_description_7">"According to the law of conservation of energy, the limiting kinetic and potential energies are equal. What gives us the opportunity to find the maximum height. "</string>

</resources>
