<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0"
    android:background="@drawable/background_railways_anime"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_vagons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

            </android.support.v7.widget.RecyclerView>

            <EditText
                android:id="@+id/speed_edit_text"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/speed"
                android:inputType="numberDecimal" />
            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/test_resonance_button"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:text="@string/test_sequence_resonance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible"
                    android:layout_marginHorizontal="@dimen/cardview_default_elevation"/>
                <Button
                    android:id="@+id/test_stop_button"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:text="@string/test_sequence_stop"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible"
                    android:layout_marginHorizontal="@dimen/cardview_default_elevation"/>

            </LinearLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/speed_chart"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>