<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0"
    android:background="@drawable/background_railways_anime"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <Button
                android:id="@+id/about_button"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:background="@color/colorTransparent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="40dp"
                android:text="@string/about" />

            <Button
                android:id="@+id/paths_button"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:background="@color/colorTransparent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/about_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:text="@string/paths" />

            <Button
                android:id="@+id/sequenses_button"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:background="@color/colorTransparent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/paths_button"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="32dp"
                android:text="@string/sequences" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/sequenses_button"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="32dp"
                android:padding="8dp"
                android:background="@drawable/white_rounded_shape">

                <TextView
                    android:id="@+id/introduction_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@android:color/black" />

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>