<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_collapseParallaxMultiplier="1.0"
    android:background="@drawable/background_railways_anime"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/path_test_chart"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/path_test_chart"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/white_rounded_shape">

                <TextView
                    android:id="@+id/testing_path_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/testing_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:gravity="center"
                    android:text="TextView" />

                <EditText
                    android:id="@+id/path_test_speed_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:ems="10"
                    android:hint="@string/speed"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/path_test_mass_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/mass"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/path_test_start_button"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:background="@color/colorTransparent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/test"
                    tools:text="start path test" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
